第10章翻译完毕

--- a/I would never send my kids to school我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
@@ -340,7 +340,7 @@ While a lecturing teacher may spend 45 minutes to feed a child with a long strin
 
 Where I speak of golden nuggets of knowledge, Peter Thiel speaks of the [power law](https://supermemo.guru/wiki/Thiel_on_power_law): a small set of core skills honed to perfection can produce power returns.
 
-在我谈到知识的金块时，Peter Thiel 谈到了[幂律](https://supermemo.guru/wiki/Thiel_on_power_law)：经过磨练的一小部分核心技能可以带来指数级回报。
+在我谈到高价值知识时，Peter Thiel 谈到了[幂律](https://supermemo.guru/wiki/Thiel_on_power_law)：经过磨练的一小部分核心技能可以带来指数级回报。
 
 > **Small investments in learning** can produce **dramatic changes** to individual lives and to the entire planet!
 >
@@ -434,7 +434,7 @@ Unlike [Shannon entropy](https://en.wikipedia.org/wiki/Entropy_(information_theo
 
 The learntropy of a boring lecture will shoot up once a golden nugget of knowledge fills an important gap in understanding. The increase in learntropy will be proportional to the expression of the [stability](https://supermemo.guru/wiki/Stability) of the memory trace determining knowledge valuation (incl. descending traces in the [knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network)). The impact of a golden nugget will wane in time. The cumulative effect of those happy discoveries will determine the level of learntropy at any given time (e.g. during a lecture).
 
-一旦知识的金块填补了理解上的一个重要空白，枯燥的演讲的学习熵就会激增。学习熵的增加与决定知识估值的记忆[稳定性](https://supermemo.guru/wiki/Stability)曲线的表达式成正比（包括[知识估值网络](https://supermemo.guru/wiki/Knowledge_valuation_network)中的下降曲线）。随着时间的推移，金块的影响将逐渐减弱。这些令人愉快的发现的累积效应将决定在任何特定时段（例如在演讲期间）的学习熵的水平。
+一旦高价值知识填补了理解上的一个重要空白，枯燥的演讲的学习熵就会激增。学习熵的增加与决定知识估值的记忆[稳定性](https://supermemo.guru/wiki/Stability)曲线的表达式成正比（包括[知识估值网络](https://supermemo.guru/wiki/Knowledge_valuation_network)中的下降曲线）。随着时间的推移，高价值知识的影响将逐渐减弱。这些令人愉快的发现的累积效应将决定在任何特定时段（例如在演讲期间）的学习熵的水平。
 
 The above shows that educators can influence learntropy, enhance the [learn drive](https://supermemo.guru/wiki/Learn_drive), and enhance long-term learning outcomes. Feeding passive knowledge is a bad strategy. Providing answers should be selective and should favor high importance abstract and universal questions. Free explorations of self-directed learning are the best formula for lifelong sustainable [learn drive](https://supermemo.guru/wiki/Learn_drive) and lifelong learning.
 
@@ -678,7 +678,7 @@ If you are unconvinced, think of how much you hate your news channel when they d
 
 The buzz in the nucleus accumbens can be a direct expression of pleasure or might also indicate the state of pleasure seeking. In the end, the actual interpretation does not matter for the ultimate conclusion: **boredom and displeasure are the enemies of learning**.
 
-伏隔核中的嗡嗡声可以是快乐的直接表达，也可能是寻找快乐的状态。最后，对于最终的结论，实际的解释并不重要：**无聊和不悦是学习的敌人**。
+伏隔核中的嗡嗡声可以是快乐的直接表达，也可能是寻找快乐的状态。最后，对于最终的结论，实际的解释并不重要：**无聊和不快是学习的敌人**。
 
 For efficient learning in which new knowledge complements current knowledge, we need to follow the [learn drive](https://supermemo.guru/wiki/Learn_drive). In simple terms, this means that the pleasure of learning is desirable in education. We should never learn in the state of displeasure (cf. [Desirable difficulty](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Desirable_difficulty)). Painful learning comes from the brain letting the student know that, in information theoretic sense, the new knowledge does not fit! It will be rejected. Pleasure is a good guide!
 
